# advanced_programming_Ex2

./: AnomalyDetector.h  CMakeLists.txt  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  file.csv  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
